[package]
name = "eventsource"
version = "0.1.0"
authors = ["krikar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sse-client = "1.0.0"
json = "0.12.0"
mysql = "16.1.0"
chrono = "0.4.9"
config = "0.9"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "^0.7.4"

[profile.release]
codegen-units=1
